examples/bad/09-01-wrong-order-of-functions.lagger
int main(){
    f();
    return 0;
}

int f(){
    println(42);
    return 0;
}